Deflake LayerTreeHostPictureTestTwinLayer test.

The test was doing EndTest() on the main thread after the 5th
DidCommit(), but then verifying the number of /activations/ that
happened, which was incremented on the compositor thread in
DidActivateTreeOnThread(). Since the DidCommit() races with the
DidActivateTreeOnThread(), then number of reported activations
after the test ended could be wrong.

Fix this by moving the EndTest() call to the compositor thread, after
the 5th activation.

R=enne@chromium.org

Bug: 769344
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Id78f72b9a3d7a7a5ae140dcca74e396e72114a2e
Reviewed-on: https://chromium-review.googlesource.com/1028519
Commit-Queue: enne <enne@chromium.org>
Reviewed-by: enne <enne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554093}