cc/trees/layer_tree_host_unittest_picture.cc
@@ -42,14 +42,16 @@ class LayerTreeHostPictureTestTwinLayer
   }
 
   void BeginTest() override {
-    activates_ = 0;
+    // Commit and activate to produce a pending (recycled) layer and an active
+    // layer.
     PostSetNeedsCommitToMainThread();
   }
 
   void DidCommit() override {
     switch (layer_tree_host()->SourceFrameNumber()) {
       case 1:
-        // Activate while there are pending and active twins in place.
+        // Activate reusing an existing recycled pending layer, to an already
+        // existing active layer.
         layer_tree_host()->SetNeedsCommit();
         break;
       case 2:
@@ -67,11 +69,8 @@ class LayerTreeHostPictureTestTwinLayer
         break;
       }
       case 4:
-        // Active while there are pending and active twins again.
+        // Activate while there are pending and active twins again.
         layer_tree_host()->SetNeedsCommit();
-        break;
-      case 5:
-        EndTest();
         break;
     }
   }
@@ -132,11 +131,14 @@ class LayerTreeHostPictureTestTwinLayer
     }
 
     ++activates_;
+    if (activates_ == 5)
+      EndTest();
   }
 
-  void AfterTest() override { EXPECT_EQ(5, activates_); }
+  void AfterTest() override {}
 
-  int activates_;
+  int activates_ = 0;
+
   int picture_id1_;
   int picture_id2_;
 };
